# PyPac

./: .gitignore  README.md  pyproject.toml  settings.env
src/: enums.py  main.py  settings.py  utils.py
src/data/: env_settings.py  pac_text.py
src/database/: connection.py  rules_repository.py
src/dependencies/: __init__.py  db.py  get_rules.py
src/pac/: __init__.py  generator.py  pac.txt
src/routes/: pac.py
